# stereo-client

./: .gitignore  3531.cmake  CMakeLists.txt  README.md  mpsoc.cmake  zynq.cmake  出厂烧写.md  出厂烧写.txt  在线升级.md  在线升级.txt  烧写.md
app/zscam_client/: CMakeLists.txt  ftp_dialog.cpp  ftp_dialog.h  ftp_dialog.ui  main.cpp  video_qlabel.cpp  video_qlabel.h  zscam_client.cpp  zscam_client.h  zscam_client.qrc  zscam_client.ui
docs/: class.dot  zscam_client双目使用说明.docx  zscam_client双目使用说明v1.0.docx  ~$cam_client双目使用说明.docx  跟踪客户端2.0.emmx
include/: camera_command.h  discovery_receiver.h  remote_command.h  stereo_stream.h  stream_receiver.h  stream_struct.h  system_command.h
modules/: CMakeLists.txt
modules/ptz_track/: CMakeLists.txt
modules/ptz_track/include/: pid_inc.h  poly_fit.h  ptz_calib.h  ptz_ctl_visca.h  ptz_track.h
modules/ptz_track/src/: CMakeLists.txt  fit_calib.cpp  poly_fit.cpp  ptz_calib.cpp  ptz_track.cpp  stereo_filter.cpp
modules/ptz_track/src/fit_calib/: polynomialfit.h
modules/ptz_track/test/: CMakeLists.txt  poly_fit_demo.cpp
modules/stereo_camera/: CMakeLists.txt
modules/stereo_camera/include/: ftp_client.h  media_record.h  search_camera.h  stereo_camera.h  stereo_struct.h  udpcmd.h
modules/stereo_camera/src/: CMakeLists.txt  ftp_client.cpp  stereo_camera.cpp  udpcmd.cpp
modules/stereo_camera/src/ftp_client/: ftplib.cpp  ftplib.h
modules/stereo_camera/src/json_struct/: json_detect_boxes.h  json_float_pairs.h  json_gyro_angle.h  json_pixel_point.cpp  json_pixel_point.h  json_ptz_samples.cpp  json_ptz_samples.h
modules/stereo_camera/test/: CMakeLists.txt  rpc_client_demo.cpp  search_demo.cpp  stream_client_demo.cpp
ptz_track/: CMakeLists.txt
ptz_track/include/: fit_calib.h  fit_calib_samples.h  pid_inc.h  poly_fit.h  ptz_ctl_visca.h  ptz_track.h  stereo_filter.h
ptz_track/src/: CMakeLists.txt  fit_calib.cpp  fit_calib_samples.cpp  pid_inc.cpp  poly_fit.cpp  ptz_ctl_visca.cpp  ptz_track.cpp  stereo_filter.cpp
ptz_track/src/fit_calib/: linearfit.h  poly_fit.cpp  poly_fit.h
ptz_track/test/: CMakeLists.txt
remote_camera/: CMakeLists.txt
remote_camera/include/: ftp_client.h  stereo_camera.h  stereo_detect_boxes.h  stereo_pixel_point.h
remote_camera/src/: CMakeLists.txt  stereo_gyro_angle.cpp  stereo_pixel_point.cpp
remote_camera/src/media_record/: piclib.h
src/: CMakeLists.txt  camera_command.cpp  discovery_receiver.cpp  remote_command.cpp  stereo_detect_boxes.cpp  stereo_stream.cpp  stream_receiver.cpp  system_command.cpp
src/stream_struct/: json_detect_boxes.cpp  json_detect_boxes.h  json_gyro_angle.cpp  json_gyro_angle.h
stereo_camera/: CMakeLists.txt
stereo_camera/include/: float_pair_vector.h  ftp_client.h  search_camera.h  stereo_camera.h  stereo_gyro_angle.h
stereo_camera/src/: CMakeLists.txt  float_pair_vector.cpp  ftp_client.cpp  media_record.cpp  search_camera.cpp  stereo_camera.cpp  stereo_gyro_angle.cpp
stereo_camera/src/broadcast_client/: broadcast_client.cpp  broadcast_client.h  broadcast_receiver.cpp  broadcast_receiver.h
stereo_camera/src/ftp_client/: ftplib.cpp  ftplib.h
stereo_camera/src/json_struct/: json_detect_boxes.cpp  json_float_pairs.cpp  json_gyro_angle.cpp
stereo_camera/src/media_record/: avilib.cpp  avilib.h  piclib.cpp
stereo_camera/src/rpc_client/: rpc_client.cpp  rpc_client.h  rpc_receiver.h
stereo_camera/src/stereo_camera/: command_client.cpp  command_client.h  discovery_receiver.cpp  discovery_receiver.h  stream_receiver.cpp  stream_receiver.h
stereo_camera/src/stream_client/: stream_client.cpp  stream_client.h  stream_receiver.cpp  stream_receiver.h
stereo_camera/test/: CMakeLists.txt  rpc_client_demo.cpp  search_demo.cpp  stream_client_demo.cpp
