if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()


#ADD_DEFINITIONS(-DASIO_STANDALONE)

if (UNIX)
	ADD_DEFINITIONS(-fPIC)
endif()


include_directories(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/fit_calib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/libVISCA2/visca)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/jsoncpp/include)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} STEREO_FRAMEWORK_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/fit_calib STEREO_FRAMEWORK_SRCS)

SET(LIBS ${LIBS} jsoncpp)
SET(LIBS ${LIBS} visca) 

ADD_LIBRARY(${PROJECT_NAME} SHARED ${STEREO_FRAMEWORK_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS})

ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${STEREO_FRAMEWORK_SRCS})



INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
INSTALL(TARGETS ${PROJECT_NAME}_static DESTINATION lib)



