if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()



ADD_DEFINITIONS(-DASIO_STANDALONE)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/rpclib/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/jsoncpp/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/asio/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/stereo_camera)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/media_record)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} STEREO_CAMERA_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/stereo_camera STEREO_CAMERA_SRCS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/media_record STEREO_CAMERA_SRCS)


SET(LIBS ${LIBS} jsoncpp)
SET(LIBS ${LIBS} rpc)


ADD_LIBRARY(stereo_camera SHARED ${STEREO_CAMERA_SRCS})
TARGET_LINK_LIBRARIES(stereo_camera ${LIBS})
ADD_LIBRARY(stereo_camera_static STATIC ${STEREO_CAMERA_SRCS})


INSTALL(TARGETS stereo_camera DESTINATION lib)
INSTALL(TARGETS stereo_camera_static DESTINATION lib)